--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <main>
-        <h1>数独</h1>
-        <a href="https://bubudoufu.com/webapp/">HOMEへ戻る</a>
+        <h1>LiveLive!Dayメンバープレイスクイズ♪</h1>
         <table class="main"></table>
         <table class="select"></table>
         <div class="box">
