--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </tr>
             <tr>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item1" value="1"><label class="label" for="item1">上原歩夢</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item1" value="1" checked><label class="label" for="item1">上原歩夢</label>
                 </td>
                 <td>
                     <input type="checkbox" class="check_box" name="checkItem" id="item2" value="2" checked><label class="label" for="item2">中須かすみ</label>
@@ -118,10 +118,10 @@
                     <input type="checkbox" class="check_box" name="checkItem" id="item7" value="7" checked><label class="label" for="item7">優木せつ菜</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item8" value="8"><label class="label" for="item8">エマ</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item8" value="8" checked><label class="label" for="item8">エマ</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item9" value="9"><label class="label" for="item9">天皇寺璃奈</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item9" value="9" checked><label class="label" for="item9">天皇寺璃奈</label>
                 </td>
                 <td>
                     <input type="checkbox" class="check_box" name="checkItem" id="item10" value="10" checked><label class="label" for="item10">三船栞子</label>
