--- a/index.html
+++ b/index.html
@@ -4,52 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoveLive!Daysメンバープレイスクイズ♪</title>
+    <title>sudoku</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <main>
         <h1>LiveLive!Days<br>メンバープレイスクイズ♪</h1>
-                <select id="school">
-                    <option value="μ's">μ's</option>
-                    <option value="Aqours">Aqours</option>
-                    <option value="Nijigasaki" selected>虹ヶ咲</option>
+        <select id="school">
+            <option value="μ's"selected>μ's</option>
+            <option value="Aqours">Aqours</option>
+            <option value="Nijigasaki" >虹ヶ咲</option>
+        </select>
+        <button onclick="buttonclick(),who1(),who2(),who3(),who4(),place1(),place2(),place3()">START</button>
+        <div>
+            <div>
+                <select name="CheckPlace" id="who1">
+                    <option value="Non">誰</option>
                 </select>
-                <button onclick="buttonclick(),who1(),who2(),who3(),who4(),place1(),place2(),place3()">START</button>
-                <div>
-                    <div>
-                        <select name="CheckPlace" id="who1">
-                            <option value="Non">誰</option>
-                        </select>
-                    </div>
-                    <div>
-                        <select name="CheckPlace" id="who2">
-                            <option value="Non">誰</option>
-                        </select>
-                        の
-                        <select name="CheckPlace" id="place1">
-                            <option value="Non">何処にいる</option>
-                        </select>
-                    <div>
-                        <select name="CheckPlace" id="who3">
-                            <option value="Non">誰</option>
-                        </select>
-                        の
-                        <select name="CheckPlace" id="place2">
-                            <option value="Non">何処にいる</option>
-                        </select>
-                    </div>
-                    <div>
-                        <select name="CheckPlace" id="who4">
-                            <option value="Non">誰</option>
-                        </select>
-                        の
-                        <select name="CheckPlace" id="place3">
-                            <option value="Non">何処にいる</option>
-                        </select>
-                    </div>
-                </div>
+            </div>
+            <div>
+                <select name="CheckPlace" id="who2">
+                    <option value="Non">誰</option>
+                </select>
+                の
+                <select name="CheckPlace" id="place1">
+                    <option value="Non">何処にいる</option>
+                </select>
+            <div>
+                <select name="CheckPlace" id="who3">
+                    <option value="Non">誰</option>
+                </select>
+                の
+                <select name="CheckPlace" id="place2">
+                    <option value="Non">何処にいる</option>
+                </select>
+            </div>
+            <div>
+                <select name="CheckPlace" id="who4">
+                    <option value="Non">誰</option>
+                </select>
+                の
+                <select name="CheckPlace" id="place3">
+                    <option value="Non">何処にいる</option>
+                </select>
+            </div>
+        </div>
+
         <table class="main"></table>
         <table class="select"></table>
         <table>
@@ -75,22 +76,22 @@
             </tr>
             <tr>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item1" value="1" checked><label class="label" for="item1">上原歩夢</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item1" value="1" ><label class="label" for="item1">上原歩夢</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item2" value="2" checked><label class="label" for="item2">中須かすみ</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item2" value="2" ><label class="label" for="item2">中須かすみ</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item3" value="3" checked><label class="label" for="item3">桜坂しずく</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item3" value="3" ><label class="label" for="item3">桜坂しずく</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item4" value="4" checked><label class="label" for="item4">朝香果林</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item4" value="4" ><label class="label" for="item4">朝香果林</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item5" value="5" checked><label class="label" for="item5">宮下愛</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item5" value="5" ><label class="label" for="item5">宮下愛</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item6" value="6" checked><label class="label" for="item6">近江彼方</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item6" value="6" ><label class="label" for="item6">近江彼方</label>
                 </td>
             </tr>
             <tr>
@@ -115,26 +116,30 @@
             </tr>
             <tr>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item7" value="7" checked><label class="label" for="item7">優木せつ菜</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item7" value="7" ><label class="label" for="item7">優木せつ菜</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item8" value="8" checked><label class="label" for="item8">エマ</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item8" value="8" ><label class="label" for="item8">エマ</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item9" value="9" checked><label class="label" for="item9">天皇寺璃奈</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item9" value="9" ><label class="label" for="item9">天皇寺璃奈</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item10" value="10" checked><label class="label" for="item10">三船栞子</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item10" value="10" ><label class="label" for="item10">三船栞子</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item11" value="11" checked><label class="label" for="item11">ミア</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item11" value="11" ><label class="label" for="item11">ミア</label>
                 </td>
                 <td>
-                    <input type="checkbox" class="check_box" name="checkItem" id="item12" value="12" checked><label class="label" for="item12">鍾嵐珠</label>
+                    <input type="checkbox" class="check_box" name="checkItem" id="item12" value="12" ><label class="label" for="item12">鍾嵐珠</label>
                 </td>
             </tr>
         </table>
+
+        <div class="box">
             <div class="check" onclick="setting(),Check1(),Check2(),check()">正解チェック</div>
+            <div class="remove" onclick="Copy(),Anser(),change()">GO!</div>
+        </div>
         <h2></h2>
     </main>
     <script type="text/javascript" src="main.js"></script>
