--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sudoku</title>
+    <title>LiveLive!Daysメンバープレイスクイズ♪</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -137,8 +137,9 @@
         </table>
 
         <div class="box">
-            <div class="check" onclick="setting(),Check1(),Check2(),check()">正解チェック</div>
-            <div class="remove" onclick="Copy(),Anser(),change()">GO!</div>
+            <div class="check" onclick="setting(),Check1(),Check2(),check()">Check</div>
+            <div class="remove" onclick="Delete()">Delete</div>
+            <div class="GO" onclick="Copy(),Anser(),change()">GO!</div>
         </div>
         <h2></h2>
     </main>
